--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "js.cookie": "^0.0.4",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
