--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/firebase": "^7.2.3",
     "core-js": "^3.6.5",
     "firebase": "^8.2.1",
+    "firebase-tools": "^9.1.0",
     "js.cookie": "^0.0.4",
     "nuxt": "^2.14.6"
   },
